# patchwork

./: CMakeLists.txt  README.md  prd.md
.cache/clangd/index/: app.cpp.FCE12B680948B3F8.idx  app.h.F51A1F2B2783C230.idx  buffer.cpp.4B04EB08A850CA23.idx  buffer.h.E540621CE49BF937.idx  build.cpp.96BFF2CC7CE8285D.idx  build.h.ECA5845D6164515B.idx  clangd_client.cpp.91624B929CA8C0E9.idx  clangd_client.h.7CC52E46600CAFAF.idx  client.h.834BDFB79F80524E.idx  codex_app_server_client.cpp.616D1B77063F2AB6.idx  codex_app_server_client.h.6CB2AA586EA47DA5.idx  codex_client.cpp.62AB195EE251EEF4.idx  codex_client.h.CB2252FE282FC2EF.idx  command.cpp.A3FB0269601C7D2C.idx  command.h.DEDAEF362690CAD3.idx  completion.cpp.7780C333248933FA.idx  completion.h.BFF006F12F04D8CF.idx  cpp_highlighter.cpp.F7801FA440BECBCB.idx  cpp_highlighter.h.F2499DE93DEC4E35.idx  cursor.cpp.68A84751E1B40328.idx  cursor.h.5530F3605EFCCCD5.idx  diagnostic.cpp.157EDFB4EB094E07.idx  diagnostic.h.10CC413DA22BC1ED.idx  diff.cpp.46AC127F83C3B85B.idx  diff.h.E6C7211395F7E60D.idx  editor_state.cpp.BDF2767E485949F8.idx  editor_state.h.5F3CA8EDB094154C.idx  git_status.cpp.0B74906874215EF4.idx  git_status.h.A42ED20F927CB306.idx  go_highlighter.cpp.9B4597A18DCF7403.idx  go_highlighter.h.6ABA7EF294CD5D35.idx  highlighter.h.FE7BC3A73D621FD1.idx  java_highlighter.cpp.899801A71EA1C7BA.idx  java_highlighter.h.F6A36DC824F4B166.idx  javascript_highlighter.cpp.5A91D8550F841758.idx  javascript_highlighter.h.ED76960892C8DC86.idx  json.cpp.DF28CA383210E64F.idx  json.h.2ECD26407DB15EA7.idx  language.cpp.613DD238FABE72A1.idx  language.h.20B52E13A21B99CA.idx  (+30 more)
src/: app.cpp  app.h  buffer.cpp  buffer.h  build.cpp  build.h  command.cpp  command.h  cursor.cpp  cursor.h  diff.cpp  diff.h  editor_state.cpp  editor_state.h  git_status.cpp  git_status.h  json.cpp  json.h  main.cpp  patch.cpp  patch.h  screen.cpp  screen.h  selection.cpp  selection.h  terminal.cpp  terminal.h
src/ai/: client.h  codex_app_server_client.cpp  codex_app_server_client.h  codex_client.cpp  codex_client.h  local_agent.h  mock_client.cpp  mock_client.h  no_ai_client.cpp  no_ai_client.h  openai_client.cpp  openai_client.h  prompt.cpp  prompt.h  rate_limit.h
src/intellisense/: clangd_client.cpp  clangd_client.h  completion.cpp  completion.h  diagnostic.cpp  diagnostic.h
src/syntax/: cpp_highlighter.cpp  cpp_highlighter.h  go_highlighter.cpp  go_highlighter.h  highlighter.h  java_highlighter.cpp  java_highlighter.h  javascript_highlighter.cpp  javascript_highlighter.h  language.cpp  language.h  markdown_highlighter.cpp  markdown_highlighter.h  plain_text_highlighter.cpp  plain_text_highlighter.h  python_highlighter.cpp  python_highlighter.h  registry.cpp  registry.h  rust_highlighter.cpp  rust_highlighter.h  theme.cpp  theme.h
tests/: test_main.cpp
tests/fixtures/: ai_error_response.txt  ai_explain_response.txt  build_failure_output.txt  malformed_patch.txt  simple_patch.diff
